# setu

./: Cargo.toml  README.md  Todo.md
.github/workflows/: ci.yml
src/: actions.rs  app.rs  assets.rs  completion.rs  icons.rs  main.rs
src/components/: app_sidebar.rs  audio_player.rs  auth_editor.rs  body_type_selector.rs  collections_panel.rs  custom_dropdown.rs  environment_panel.rs  form_data_editor.rs  header_editor.rs  history_panel.rs  json_viewer.rs  mod.rs  multipart_form_data_editor.rs  panel_tab.rs  params_editor.rs  protocol_selector.rs  sidebar.rs  status_badge.rs  tab_bar.rs  url_bar.rs
src/entities/: collections.rs  environment.rs  history.rs  load_state.rs  mod.rs  preferences.rs  request.rs  response.rs  workspace.rs
src/http/: client.rs
src/importers/: mod.rs  postman.rs
src/theme/: colors.rs  gpui_theme.rs  mod.rs  spacing.rs  typography.rs
src/utils/: curl_parser.rs  dialog_focus.rs  editor.rs  mod.rs  runtime.rs
src/views/: command_palette.rs  environment_view.rs  main_view.rs  mod.rs  request_view.rs  response_view.rs
