[package]
name = "setu"
version = "0.1.0"
edition = "2021"
description = "A modern, minimal API testing application"
authors = ["Raunak"]
license = "MIT"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
log = "0.4.29"
env_logger = "0.11.8"
serde_json = "1.0.148"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
rust-embed = "8.9.0"
urlencoding = "2.1.3"
