[package]
name = "setu"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A modern, minimal API testing application"
authors = ["Raunak"]
license = "MIT"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "charset",
    "form",
    "http2",
    "system-proxy",
    "rustls",
    "multipart",
] }
log = "0.4.29"
env_logger = "0.11.8"
serde_json = "1.0.151"
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.24.0", features = ["v4"] }
serde = { version = "1.0.229", features = ["derive", "rc"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "sync", "fs", "time"] }
rust-embed = "8.12.0"
urlencoding = "2.1.3"
mime_guess = "2.0.5"
dirs = "6.0.0"
base64 = "0.22.1"
bytes = { version = "1.11.1", features = ["serde"] }
rodio = { version = "0.22.2", default-features = false, features = [
    "playback",
    "flac",
    "mp3",
    "mp4",
    "vorbis",
    "wav",
] }
